syntax = "proto3";

option csharp_namespace = "Grpc";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto"; 

service NewsService {
  rpc GetNews (google.protobuf.Empty) returns (stream NewsDTO);
}

message News {
  int32 id = 1;
  string title = 2;
  bytes thumbnail = 3;
  string content = 4;
  google.protobuf.Timestamp creation_date = 5;
  google.protobuf.Timestamp modification_date = 6;
}

message NewsDTO {
  string title = 1;
  bytes thumbnail = 2;
  string content = 3;
}

message UpdateNewsDTO {
  int32 id = 1;
  string title = 2;
  bytes thumbnail = 3;
  string content = 4;
}

message NewsId {
  int32 id = 1;
}


